Disable display-p3 canvas and ImageData on platforms other than Monterey+ and iOS 15+ https://bugs.webkit.org/show_bug.cgi?id=230139 <rdar://81828819>

Reviewed by Sam Weinig.

Source/WebCore:

* bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneSerializer::write):
(WebCore::CloneDeserializer::read):
* html/canvas/PredefinedColorSpace.cpp:
(WebCore::toDestinationColorSpace):
(WebCore::toPredefinedColorSpace):
* html/canvas/PredefinedColorSpace.h:
* html/canvas/PredefinedColorSpace.idl:

Source/WTF:

Add HAVE(CORE_ANIMATION_FIX_FOR_RADAR_78402035) to represent whether
CoreAnimation has a fix for a bug that prevents Display P3 canvas
rendering operations from behaving correctly.

Add ENABLE(PREDEFINED_COLOR_SPACE_DISPLAY_P3) to represent whether the
"display-p3" values of the PredefinedColorSpace IDL enum is enabled.
This in turn controls whether Display P3 canvases and ImageData objects
can be created. We turn this on only for platforms where
ENABLE(DESTINATION_COLOR_SPACE_DISPLAY_P3), since that is what the
canvas and ImageData backing stores use, and only if
HAVE(CORE_ANIMATION_FIX_FOR_RADAR_78402035). The result is that these
features are only enabled on macOS Monterey+ and iOS 15+.

* wtf/PlatformEnable.h:
* wtf/PlatformEnableCocoa.h:
* wtf/PlatformHave.h:

LayoutTests:

* TestExpectations:
* platform/glib/imported/w3c/web-platform-tests/html/canvas/element/manual/wide-gamut-canvas/canvas-draw-high-bit-depth-images-expected.txt: Removed.
* platform/ios-14/TestExpectations:
* platform/ios/TestExpectations:
* platform/ios/imported/w3c/web-platform-tests/html/canvas/element/manual/wide-gamut-canvas/canvas-draw-high-bit-depth-images-expected.txt: Removed.
* platform/mac-bigsur/imported/w3c/web-platform-tests/html/canvas/element/manual/wide-gamut-canvas/canvas-draw-high-bit-depth-images-expected.txt: Removed.
* platform/mac-catalina/imported/w3c/web-platform-tests/html/canvas/element/manual/wide-gamut-canvas/canvas-draw-high-bit-depth-images-expected.txt: Removed.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/241738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282513 268f45cc-cd09-0410-ab3c-d52691b4dbfc